# inference-gateway

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  Makefile  PRODUCTION.md  README.md  docker-compose.chaos.yml  docker-compose.yaml  pyproject.toml  requirements.txt
cli/: main.py
config/: backends.yaml
gateway/: auth.py  chaos.py  circuit_breaker.py  coalescing.py  config.py  cost_tracker.py  events.py  journal.py  l1_cache.py  latency_tracker.py  main.py  models.py  priority_queue.py  rate_limiter.py  routing.py  semantic_cache.py  strategies.py  token_counting.py
gateway/backends/: anthropic.py  ollama.py  openai.py
gateway/dashboard/: dashboard.css  dashboard.js  index.html
gateway/observability/: logging.py  metrics.py  tracing.py
gateway/routes/: admin.py  chat.py  dashboard.py  health.py
nginx/: nginx.conf
prometheus/: prometheus.yml
scripts/: ollama-entrypoint.sh  rolling-restart.sh  seed.sh  status.sh  test-cli-e2e.sh  test-terraform.sh  test-tracing-e2e.sh
terraform/: alb.tf  ecr.tf  ecs.tf  monitoring.tf  outputs.tf  redis.tf  security.tf  terraform.tfvars.example  variables.tf  vpc.tf
tests/: conftest.py
tests/integration/: test_auth.py  test_circuit_breaker.py  test_dashboard.py  test_health.py  test_journal.py  test_multi_instance.py  test_priority_queue.py  test_rate_limiter.py  test_routing_strategies.py  test_semantic_cache.py  test_streaming.py  test_tracing_e2e.py
tests/load/: locustfile.py
tests/unit/: test_admin.py  test_anthropic_streaming.py  test_anthropic_translator.py  (+33 more)
(+4 files in other folders)
